Improving supported MediaType and adding caching to service layer of metrics